Fixed collapsing sidebar bug, futzed with sidebar animations

--- a/client/layout/layout/_sidebar.scss
+++ b/client/layout/layout/_sidebar.scss
@@ -139,12 +139,16 @@ a.sidebar_item {
     border-right: 1px solid border-color;
 
     &.animating {
-        transition: transform 0.25s;
+        transition-property: transform;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0.0, 0.6, 1);
     }
 
     &.active {
         transform: translateX(0);
+        transition-duration: 250ms;
         box-shadow: 4px 0px 10px -1px rgba(0,0,0,0.11);
+        transition-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
     }
 }
 
