--- a/client/layout/pages/room/_chat.scss
+++ b/client/layout/pages/room/_chat.scss
@@ -31,6 +31,7 @@
     font-size: 13px;
     margin: 12px 8px 0 12px;
     white-space: pre-wrap;
+    word-wrap: break-word;
 
     a {
         color: $secondary-color;
